# wonder

./: .clang-format  .clang-tidy  .gitignore  404.html  Questions_for_Nils.md  README.md  SConstruct  TODO.md  Versioned_install.md  index.html  meson.build  meson.options  meson_options.txt  mkdocs.yml  sitemap.xml  xwonder.desktop
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml  meson.yml  mkdocs.yml
About/Authors/: index.html
About/License/: index.html
About/WFS/: index.html
Components/CWonder/: index.html
Components/FWonder/: index.html
Components/JFWonder/: index.html
Components/QFWonder/: index.html
Components/ScorePlayer/: index.html
Components/TWonder/: index.html
Components/Tracker/: index.html
Components/XWonder/: index.html
Installation/Config/: index.html
OSC/CWonder/: index.html
OSC/FWonder/: index.html
OSC/JFWonder/: index.html
OSC/OSC/: index.html
OSC/QFWonder/: index.html
OSC/ScorePlayer/: index.html
OSC/TWonder/: index.html
OSC/Tracker/: index.html
OSC/XWonder/: index.html
Services/: index.html
config/examples/EN325/wonder/: meson.build
config/examples/EN325/wonder/cwonder/: cwonder_config.xml
config/examples/HAW-draft/speakers/n101/: twonder_speakerarray3.xml
config/examples/HuFo-draft/: twonder_config.xml
configs/: cwonder_config.xml  twonder_config.xml
configs/EN325/: cluster.conf  cwonder_config.xml  twonder.conf  twonder_n101.conf  twonder_n102.conf  twonder_riviera.conf  twonder_wintermute.conf
configs/HAW/speakers/n101/: twonder_speakerarray4.xml
configs/HuFo/: cluster.conf  twonder_RE02.conf  twonder_RE03.conf
configs/example/: twonder_n101.conf
configs/example/speakers/n102/: twonder_speakerarray2.xml  twonder_speakerarray5.xml  twonder_speakerarray6.xml
configs/speakers/n101/: twonder_speakerarray1.xml  twonder_speakerarray2.xml  twonder_speakerarray5.xml  twonder_speakerarray7.xml
configs/speakers/n102/: twonder_speakerarray3.xml  twonder_speakerarray4.xml
docs/: Build.md  Config.md  Services.md  index.md
docs/About/: Authors.md  WFS.md
docs/Components/: FWonder.md  JFWonder.md  ScorePlayer.md  TWonder.md
docs/Installation/: Build.md  Config.md
docs/Manual/: CWonder.md  QFWonder.md  TWonder.md  Tracker.md  XWonder.md
docs/OSC/: CWonder.md  FWonder.md  JFWonder.md  OSC.md  QFWonder.md  ScorePlayer.md  TWonder.md  Tracker.md  XWonder.md
documentation/: Configurationfiles_Overview.ods
examples/config/EN325/: meson.build
examples/config/EN325/wonder/: cluster.conf
examples/config/EN325/wonder/twonder/: twonder_config.xml
examples/config/HAW-draft/speakers/n101/: twonder_speakerarray6.xml
examples/config/HAW-draft/speakers/n102/: twonder_speakerarray1.xml  twonder_speakerarray7.xml
examples/config/HuFo-draft/: cluster.conf
examples/projects/: empty.xml
scripts/: remote-start-wonder.sh  remote-status-status.sh  remote-stop-wonder.sh  start-wonder.sh  start_twonder.sh  status-wonder.sh  stop-wonder.sh
scripts/cluster/: reboot.sh  shutdown.sh
scripts/configs/: cluster.conf
scripts/connections/: connect-all-twonder.sh  connect-twonder.sh
scripts/cwonder/: start-cwonder.sh  stop-cwonder.sh
scripts/jack/: start-all-jackd.sh  start-jackd.sh  stop-all-jackd.sh
scripts/twonder/: start-all-twonder.sh  start-twonder.sh  stop-all-twonder.sh
search/: search_index.json
services/: cwonder.service  cwonder.service.in  cwonder@.service  cwonder@.service.in  jack.service  jfwonder.service.in  meson.build  twonder.service  twonder.service.in  twonder@.service  twonder@.service.in
site_scons/site_tools/qt5/: __init__.py
src/cwonder/: cwonder.cpp  cwonder.h  cwonder_config.cpp  cwonder_config.h  events.cpp  events.h  main.cpp  meson.build  oscinctrl.cpp  oscinctrl.h  oscping.cpp  oscping.h  oscstream.cpp  oscstream.h
src/include/: commandqueue.h  commandqueue.hpp  config.h  constants.hpp  jackringbuffer.h  liblo_extended.h  liblo_extended.hpp  meson.build  oscin.h  oscin.hpp  project.h  project.hpp  rtcommandengine.h  rtcommandengine.hpp  speakersegment.h  speakersegment.hpp  timestamp.h  timestamp.hpp  types.hpp  vector2d.h  vector3d.h  vector3d.hpp  wonder_path.h  wonder_path.hpp
src/jfwonder/: jfwonder.cpp  jfwonder_config.cpp  jfwonder_config.h  meson.build
src/lib/: commandqueue.cpp  jackringbuffer.cpp  liblo_extended.cpp  meson.build  oscin.cpp  project.cpp  rtcommandengine.cpp  speakersegment.cpp  timestamp.cpp  wonder_path.cpp
src/score/: file_io.cpp  main.cpp  meson.build  mtc_com.cpp  scorecontrol.cpp  scoreplayer_config.cpp
src/twonder/: angle.cpp  angle.h  delaycoeff.cpp  delaycoeff.h  delayline.cpp  delayline.h  interpolat.h  listener.cpp  listener.h  listener_array.cpp  listener_array.h  meson.build  osc.cpp  osc.h  source.cpp  source.h  speaker.cpp  speaker.h  twonder.cpp  twonder_config.cpp  twonder_config.h
src/xwonder/: AddChannelsDialog.cpp  AddChannelsDialog.h  ChannelsWidget.cpp  ChannelsWidget.h  Colors.h  FilenameDialog.cpp  FilenameDialog.h  OSCReceiver.cpp  OSCReceiver.h  Snapshot.cpp  Snapshot.h  SnapshotNameDialog.cpp  SnapshotNameDialog.h  SnapshotSelector.cpp  SnapshotSelector.h  SnapshotSelectorButton.cpp  SnapshotSelectorButton.h  Source.cpp  Source.h  SourceCoordinates.h  SourceGroup.cpp  SourceGroup.h  SourcePositionDialog.cpp  SourcePositionDialog.h  SourceWidget.cpp  SourceWidget.h  Sources3DWidget.cpp  Sources3DWidget.h  StreamClientWidget.cpp  StreamClientWidget.h  TimeLCDNumber.cpp  TimeLCDNumber.h  TimelineWidget.cpp  TimelineWidget.h  Xwonder.cpp  XwonderConfig.cpp  XwonderConfig.h  XwonderMainWindow.cpp  XwonderMainWindow.h  icons.qrc  (+5 more)
src/xwonder/resources/: xwonder.xpm
subprojects/: libxml++.wrap
systemd/: meson.build  twonder.service.in
